idf_component_register(SRCS 
                        "main.cpp" 
                        "dallas/owb.cpp" 
                        "dallas/owb_rmt.cpp" 
                        "dallas/owb_gpio.cpp"  
                        "dallas/ds18b20.cpp"
                       INCLUDE_DIRS 
                        "." 
                        "dallas")

